fixed sizing on card images, using max-width  so don't overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #ffd90f
 }
 
 * {
@@ -25,6 +26,7 @@
 
 .cardImg {
   width: 700px;
+  max-width: 90%;
 }
 
 .navBar {
